Adding the stars by html entry
&#x2B50;

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     <hr>
     <h3>My Hobbies</h3>
     <ol>
-        <li><a href="#">One</a></li>
-        <li><a href="#">Tow</a></li>
-        <li><a href="#">Three</a></li>
+        <li><a href="#">One &#x2B50;</a></li>
+        <li><a href="#">Tow &#x2B50; &#x2B50;</a></li>
+        <li><a href="#">Three &#x2B50; &#x2B50; &#x2B50;</a></li>
     </ol>
     <hr>
     <h3>Work Experience</h3>
@@ -74,7 +74,7 @@
             </td>
 
             <td>
-                µ µ µ µ
+               &#x2B50;&#x2B50;&#x2B50;&#x2B50;&#x2B50;
             </td>
         </tr>
         <tr>
@@ -82,7 +82,7 @@
                 Web APP Development
             </td>
             <td>
-                µ µ µ µ
+                &#x2B50;&#x2B50;&#x2B50;&#x2B50;&#x2B50;
             </td>
         </tr>
     </table>
